# lbfgsb-gpu

examples/: CMakeLists.txt
examples/normApproximation/: CMakeLists.txt  normApproximation_cpu.cpp  normApproximation_cpu.h  normApproximation_cuda.cu  normApproximation_cuda.h  normApproximation_main.cu
